Ensure partition block size is not 0.

* I tried having this test in KDiskDeviceManager.cpp, but it
   failed booting in one case and did not solve the problem in another.
   I think this is because there is an Open() call here, and that rereads
   the blocksize.
 * Tested and it solved the problem for me.
 * Should fix #10717 and #9489 at least.

Signed-off-by: Jessica Hamilton <jessica.l.hamilton@gmail.com>